# Tugas-Magang-3-Robocon-ITS

./: README.md  src.tar
src/turtle_tracer_ros2/: package.xml  setup.cfg  setup.py
src/turtle_tracer_ros2/turtle_tracer_ros2/: draw_logo_masked_spiral.py
