<?xml version="1.0"?>
<package format="3">
  <name>turtle_tracer_ros2</name>
  <version>0.0.1</version>
  <description>Turtlesim spiral with PNG logo mask</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>turtlesim</exec_depend>
  <exec_depend>python3-pil</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
